Refacto templates and avoid flickering effect when resizing map
ref #58

--- a/src/modules/CRUD/components/Details/styles.scss
+++ b/src/modules/CRUD/components/Details/styles.scss
@@ -17,7 +17,7 @@
   &--visible {
     transform: translateX(0);
 
-    & + .interactive-map {
+    ~ .CRUD-map .interactive-map {
       .mapboxgl-ctrl-top-right {
         right: 20.5rem;
       }
@@ -164,9 +164,9 @@
 @media all and (min-width: 66em) {
   .CRUD-details {
     &--visible {
-      & + .interactive-map {
+      ~ .CRUD-map .interactive-map {
         .mapboxgl-ctrl-top-right {
-          right: calc(40% + 0.5rem);
+          right: calc(40% + 0.3rem);
         }
       }
     }
