--- a/src/modules/CRUD/views/Map/styles.scss
+++ b/src/modules/CRUD/views/Map/styles.scss
@@ -1,11 +1,12 @@
-$table_height: '1 / 3'; // = 33%
-
 .CRUD-map {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  overflow: hidden;
-  justify-content: center;
+  .interactive-map {
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    height: 100%;
+    z-index: 1;
+  }
 
   .mapboxgl-canvas {
     opacity: 1;
@@ -19,53 +20,49 @@ $table_height: '1 / 3'; // = 33%
       filter: blur(1rem);
     }
   }
+}
 
-  &__map {
-    position: relative;
-    display: flex;
-    width: 100%;
+.CRUD-table {
+  position: relative;
+  flex-shrink: 0;
+  padding: 0;
+  height: 0;
+  transition: height .2s ease-in;
+  display: flex;
+  &--medium {
+    height: calc(100% / 3);
+    ~ .CRUD-map .interactive-map {
+      .mapboxgl-ctrl-bottom-left {
+        bottom: calc(100% / 3);
+      }
+    }
+  }
+  &--full {
     height: 100%;
   }
-
-  &__table {
-    position: relative;
-    flex-shrink: 0;
-    padding: 0;
-    height: 0;
-    transition: height .2s ease-in;
-    display: flex;
-    &--active {
-      height: calc(100% * #{$table_height});
-    }
-    &--minified {
-      height: 3rem;
-    }
-  }
-}
-
-.table-container {
-  background:  #fff;
-  transition: transform .2s ease-in;
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  z-index: 10;
-  overflow-y: hidden;
-
-  &--full {
-    transform: translateY(calc(100% * #{$table_height} * -2));
-    height: 300%;
-  }
-
   &--minified {
-    transform: translateY(0);
     height: 3rem;
+    ~ .CRUD-map .interactive-map {
+      .mapboxgl-ctrl-bottom-left {
+        bottom: 3rem;
+      }
+    }
   }
 
-  .table {
-    display: flex;
-    flex-direction: column;
+  .table-container {
+    background:  #fff;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 10;
+    overflow-y: hidden;
+
+    .table {
+      display: flex;
+      flex-direction: column;
+    }
   }
 }
+
